--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon server.js"
+    "test": "jest --coverage --verbose --detectOpenHandles --no-cache --watch-all ./test",
+    "integration": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -21,5 +21,15 @@
   "dependencies": {
     "express": "^4.18.2",
     "xml2js": "^0.6.0"
+  },
+  "devDependencies": {
+    "eslint": "^8.42.0",
+    "eslint-config-semistandard": "^17.0.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-n": "^15.7.0",
+    "eslint-plugin-promise": "^6.1.1",
+    "jest": "^29.5.0",
+    "nodemon": "^2.0.22"
   }
 }
